--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Aravinth's Portfolio | SDE & Data Science</title>
+    <title>Chala's Portfolio | Data Sciencist</title>
 
     <!-- Google Site Verification -->
     <meta
@@ -15,14 +15,11 @@
     <!-- Meta Description for SEO -->
     <meta
       name="description"
-      content="Explore Aravinth's portfolio featuring software development, data science, and machine learning projects. Discover real-world applications, skills, and achievements in SDE and AI."
+      content="Explore Chala's portfolio featuring software development, data science, and machine learning projects. Discover real-world applications, skills, and achievements in SDE and AI."
     />
 
     <!-- Open Graph Tags for Social Sharing -->
-    <meta
-      property="og:title"
-      content="Aravinth's Portfolio | SDE & Data Science"
-    />
+    <meta property="og:title" content="Chala's Portfolio | Data Sciencist" />
     <meta
       property="og:description"
       content="Portfolio showcasing work in software development, data science, and AI."
@@ -34,14 +31,8 @@
 
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Aravinth's Portfolio | SDE & Data Science"
-    />
-    <meta
-      name="twitter:description"
-      content="Projects and experience in software engineering, data science, and AI."
-    />
+    <meta name="twitter:title" content="Chala's Portfolio | Data Sciencist" />
+    <meta name="twitter:description" content="Projects and experience." />
     <meta name="twitter:image" content="assets/preview.png" />
     <!-- Replace if needed -->
 
