--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:title" content="Chala's Portfolio | Data Sciencist" />
     <meta
       property="og:description"
-      content="Portfolio showcasing work in software development, data science, and AI."
+      content="Portfolio showcasing work in data science, and AI."
     />
     <meta property="og:image" content="assets/images/preview.png" />
     <!-- Replace with actual preview image -->
