--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
     <!-- Meta Description for SEO -->
     <meta
       name="description"
-      content="Explore Chala's portfolio featuring software development, data science, and machine learning projects. Discover real-world applications, skills, and achievements in SDE and AI."
+      content="Explore Chala's portfolio featuring software development, data science, and machine learning projects. Discover real-world applications, skills, and achievements in AI and Data Science."
     />
 
     <!-- Open Graph Tags for Social Sharing -->
     <meta property="og:title" content="Chala's Portfolio | Data Sciencist" />
     <meta
       property="og:description"
-      content="Portfolio showcasing work in data science, and AI."
+      content="Portfolio showcasing work in data science and AI."
     />
     <meta property="og:image" content="assets/images/preview.png" />
     <!-- Replace with actual preview image -->
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://chalabekabil.netlify.app/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Tags -->
